--- a/index.html
+++ b/index.html
@@ -1327,22 +1327,9 @@
 
                     <div className="header">
 
-                        <h1 style={{ marginRight: '140px' }}>🐯 YOKO's Garden</h1>
+                        <h1>🐯 YOKO's Garden</h1>
 
-                        <div style={{ position: 'absolute', right: '12px', top: '20px', display: 'flex', flexDirection: 'column', gap: '6px', zIndex: 10 }}>
-                            <button className="music-toggle" onClick={toggleMusic} style={{ position: 'static' }}>
-                                {musicEnabled ? '♪ 音楽ON' : '♪ 音楽OFF'}
-                            </button>
-                            <button 
-                                className="music-toggle" 
-                                onClick={resetDailyHabits}
-                                style={{ position: 'static', fontSize: '11px', padding: '6px 10px' }}
-                            >
-                                🔄 リセット
-                            </button>
-                        </div>
-
-                        <div className="stats-container">
+                        <div className="stats-container" style={{ position: 'relative' }}>
 
                             <div className="stat-box">
 
@@ -1366,6 +1353,19 @@
 
                                 <div className="stat-value">{streak}日</div>
 
+                            </div>
+
+                            <div style={{ position: 'absolute', right: '0', top: '0', display: 'flex', flexDirection: 'column', gap: '6px' }}>
+                                <button className="music-toggle" onClick={toggleMusic} style={{ position: 'static' }}>
+                                    {musicEnabled ? '♪ 音楽ON' : '♪ 音楽OFF'}
+                                </button>
+                                <button 
+                                    className="music-toggle" 
+                                    onClick={resetDailyHabits}
+                                    style={{ position: 'static', fontSize: '11px', padding: '6px 10px' }}
+                                >
+                                    🔄 リセット
+                                </button>
                             </div>
 
                         </div>
