--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
 
             gap: 10px;
 
+            padding-right: 120px;
+
         }
 
         .stat-box {
@@ -1329,7 +1331,20 @@
 
                         <h1>🐯 YOKO's Garden</h1>
 
-                        <div className="stats-container" style={{ position: 'relative' }}>
+                        <div style={{ position: 'absolute', right: '12px', top: '12px', display: 'flex', flexDirection: 'column', gap: '6px', zIndex: 10 }}>
+                            <button className="music-toggle" onClick={toggleMusic} style={{ position: 'static' }}>
+                                {musicEnabled ? '♪ 音楽ON' : '♪ 音楽OFF'}
+                            </button>
+                            <button 
+                                className="music-toggle" 
+                                onClick={resetDailyHabits}
+                                style={{ position: 'static', fontSize: '11px', padding: '6px 10px' }}
+                            >
+                                🔄 リセット
+                            </button>
+                        </div>
+
+                        <div className="stats-container">
 
                             <div className="stat-box">
 
@@ -1353,19 +1368,6 @@
 
                                 <div className="stat-value">{streak}日</div>
 
-                            </div>
-
-                            <div style={{ position: 'absolute', right: '0', top: '0', display: 'flex', flexDirection: 'column', gap: '6px' }}>
-                                <button className="music-toggle" onClick={toggleMusic} style={{ position: 'static' }}>
-                                    {musicEnabled ? '♪ 音楽ON' : '♪ 音楽OFF'}
-                                </button>
-                                <button 
-                                    className="music-toggle" 
-                                    onClick={resetDailyHabits}
-                                    style={{ position: 'static', fontSize: '11px', padding: '6px 10px' }}
-                                >
-                                    🔄 リセット
-                                </button>
                             </div>
 
                         </div>
