Update favicon to use provided tiger image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <title>YOKO's Garden 🐯</title>
     
-    <!-- ファビコン -->
+    <!-- ファビコン（添付画像を使用） -->
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     
     <!-- Apple Touch Icon (iOS用) -->
