リセットボタンを非表示にした

--- a/index.html
+++ b/index.html
@@ -1920,7 +1920,7 @@
                             <button 
                                 className="music-toggle" 
                                 onClick={resetDailyHabits}
-                                style={{ position: 'static', fontSize: '11px', padding: '6px 10px' }}
+                                style={{ position: 'static', fontSize: '11px', padding: '6px 10px', display: 'none' }}
                             >
                                 🔄 リセット
                             </button>
