--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
     <meta name="theme-color" content="#ff9a56" />
     <meta name="description" content="Tiger-themed habit tracker that runs 100% in the browser" />
+    
+    <!-- iOS PWA設定 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="YOKO's Garden" />
 
     <title>YOKO's Garden 🐯</title>
     
