777日連続バッジ追加 🎰

--- a/index.html
+++ b/index.html
@@ -2286,6 +2286,7 @@
             { id: 6, name: '100日連続', icon: '🐲', description: '100日連続達成', requirement: 100, type: 'streak' },
             { id: 7, name: '200日連続', icon: '👹', description: '200日連続達成', requirement: 200, type: 'streak' },
             { id: 8, name: '365日連続', icon: '🗽', description: '365日連続達成', requirement: 365, type: 'streak' },
+            { id: 20, name: '777日連続', icon: '🎰', description: '777日連続達成！大当たり！', requirement: 777, type: 'streak' },
 
             // Total (累計)
             { id: 15, name: '10回達成', icon: '🥉', description: '累計10回達成', requirement: 10, type: 'total' },
